# spiral

./: CMakeLists.txt  README.md  setup.patch  setup.py
spiral/: CMakeLists.txt  __init__.py
spiral/envs/: fluid.py  libmypaint.py  utils.py
spiral/envs/fluid_wrapper/: brush.cc  brush.h  error.cc  renderer.cc  renderer.h  simulator.cc  utils.h  wrapper.cc
spiral/envs/fluid_wrapper/python/: pyfluid.cc
spiral/envs/libmypaint_wrapper/: brush.cc  brush.h
spiral/envs/libmypaint_wrapper/python/: pylibmypaint.cc
spiral_gym/: CMakeLists.txt  __init__.py
spiral_gym/envs/: __init__.py  fluid.py  libmypaint.py
spiral_gym/envs/fluid_wrapper/: brush.cc  brush.h  error.cc  error.h  renderer.cc  renderer.h  simulator.cc  simulator.h  utils.cc  utils.h  wrapper.cc  wrapper.h
spiral_gym/envs/fluid_wrapper/protos/: config.proto
spiral_gym/envs/fluid_wrapper/python/: pyfluid.cc
spiral_gym/envs/libmypaint_wrapper/: brush.cc  brush.h  surface.cc  surface.h
spiral_gym/envs/libmypaint_wrapper/python/: pylibmypaint.cc
